alterações lista moradores e icone

--- a/encomendas.html
+++ b/encomendas.html
@@ -6,6 +6,7 @@
   <title>Gestão de Encomendas</title>
   <link rel="stylesheet" href="css/encomendas.css">
   <script src="https://unpkg.com/feather-icons"></script>
+  <link rel="icon" type="image/png" href="img/Favicon.jpg">
 </head>
 <body>
   <aside class="sidebar">
