--- a/main_login.html
+++ b/main_login.html
@@ -6,6 +6,7 @@
   <title>Dashboard - Gestão de Encomendas</title>
   <link rel="stylesheet" href="css/main_login.css" />
   <script src="https://unpkg.com/feather-icons"></script>
+  <link rel="icon" type="image/png" href="img/Favicon.jpg">
 </head>
 <body>
   <aside class="sidebar">
