--- a/main_login.html
+++ b/main_login.html
@@ -200,7 +200,14 @@
       </table>
     </div>
   </main>
-  
+
+  <div class="logout-container">
+  <a href="login.html" class="logout-button">
+    <i data-feather="log-out"></i>
+    <span>Sair</span>
+  </a>
+</div>
+
   <script>
     feather.replace();
     
