--- a/login.html
+++ b/login.html
@@ -1,84 +1,192 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login - ChagAí</title>
-  <link rel="stylesheet" href="css/login.css">
-  <link rel="icon" type="image/png" href="img/Favicon.jpg">
-  <style>
-    .hidden {
-      display: none;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login - ChegAí | Gestão de Encomendas</title>
+    <link rel="icon" type="image/jpeg" href="img/Favicon.jpg">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+    <link rel="stylesheet" href="css/login.css">
 </head>
+
 <body>
+    <div class="login-page">
+        <div class="login-image">
+            <img src="img/Img_3.png" alt="ChegAí Logo" class="login-image-logo">
+            <div class="login-image-text">
+                <h2>Bem-vindo ao ChegAí</h2>
+                <p>O jeito mais seguro e prático de receber suas encomendas no condomínio.</p>
+                <p>Cadastre-se para receber notificações imediatas quando suas entregas chegarem.</p>
+            </div>
+        </div>
 
-  <section class="login-page">
-    
-    <!-- Login -->
-    <div id="login-box" class="login-box">
-      <h2>Login</h2>
-      <form class="form">
-        <input type="email" placeholder="Email" required>
-        <input type="password" placeholder="Senha" required>
-        <button type="submit" class="btn-primary">Entrar</button>
-      </form>
+        <div class="login-container">
+            <div id="login-box" class="login-form-container">
+                <div class="login-header">
+                    <h2>Acesse sua conta</h2>
+                    <p>Entre com suas credenciais para acessar o sistema</p>
+                </div>
 
-      <div class="back-link">
-        <a href="javascript:void(0);" onclick="recuperarSenha()">Esqueceu sua senha?</a>
-      </div>
+                <div id="login-message" class="form-message error hidden">
+                    <i class="fas fa-exclamation-circle"></i>
+                    <span>Mensagem de erro aparecerá aqui</span>
+                </div>
 
-      <div class="back-link">
-        <a href="index.html">← Voltar para a página inicial</a>
-      </div>
+                <form id="login-form" class="form">
+                    <div class="form-group">
+                        <label for="login-email">E-mail</label>
+                        <div class="input-container">
+                            <input type="email" id="login-email" class="form-input" placeholder="Seu e-mail" required>
+                            <i class="fas fa-envelope input-icon"></i>
+                        </div>
+                    </div>
 
-      <div class="back-link">
-        <a href="javascript:void(0);" onclick="mostrarCadastro()">Não tem conta? Cadastre-se</a>
-      </div>
+                    <div class="form-group">
+                        <label for="login-senha">Senha</label>
+                        <div class="input-container">
+                            <input type="password" id="login-senha" class="form-input" placeholder="Sua senha" required>
+                            <button type="button" class="toggle-password" onclick="togglePasswordVisibility('login-senha')">
+                                <i class="fas fa-eye"></i>
+                            </button>
+                        </div>
+                    </div>
+
+                    <div class="form-actions">
+                        <label class="form-remember">
+                            <input type="checkbox" id="lembrar-me" class="form-checkbox" name="lembrar-me">
+                            <span>Lembrar-me</span>
+                        </label>
+                        <a href="javascript:void(0);" onclick="mostrarModalRecuperar()" class="link">Esqueceu a senha?</a>
+                    </div>
+
+                    <button type="submit" class="btn-primary">Entrar</button>
+                </form>
+
+                <div class="form-divider">
+                    <span class="form-divider-text">ou</span>
+                </div>
+
+                <div class="form-footer">
+                    <p>Ainda não tem uma conta? <a href="javascript:void(0);" onclick="mostrarCadastro()" class="link">Cadastre-se</a></p>
+                </div>
+
+                <div class="back-link">
+                    <i class="fas fa-arrow-left"></i>
+                    <a href="index.html" class="link">Voltar para a página inicial</a>
+                </div>
+            </div>
+
+            <div id="cadastro-box" class="login-form-container hidden">
+                <div class="login-header">
+                    <h2>Crie sua conta</h2>
+                    <p>Preencha seus dados para se cadastrar</p>
+                </div>
+
+                <div id="cadastro-message" class="form-message success hidden">
+                    <i class="fas fa-check-circle"></i>
+                    <span>Mensagem de sucesso aparecerá aqui</span>
+                </div>
+
+                <form id="cadastro-form" class="form">
+                    <div class="form-group">
+                        <label for="cadastro-nome">Nome completo</label>
+                        <div class="input-container">
+                            <input type="text" id="cadastro-nome" class="form-input" placeholder="Seu nome completo" required>
+                            <i class="fas fa-user input-icon"></i>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="cadastro-email">E-mail</label>
+                        <div class="input-container">
+                            <input type="email" id="cadastro-email" class="form-input" placeholder="Seu melhor e-mail" required>
+                            <i class="fas fa-envelope input-icon"></i>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="cadastro-whatsapp">WhatsApp</label>
+                        <div class="input-container">
+                            <input type="tel" id="cadastro-whatsapp" class="form-input" placeholder="(XX) XXXXX-XXXX" required>
+                            <i class="fab fa-whatsapp input-icon"></i>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="cadastro-senha">Senha</label>
+                        <div class="input-container">
+                            <input type="password" id="cadastro-senha" class="form-input" placeholder="Mínimo 6 caracteres" required>
+                            <button type="button" class="toggle-password" onclick="togglePasswordVisibility('cadastro-senha')">
+                                <i class="fas fa-eye"></i>
+                            </button>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="cadastro-confirma-senha">Confirmar senha</label>
+                        <div class="input-container">
+                            <input type="password" id="cadastro-confirma-senha" class="form-input" placeholder="Repita sua senha" required>
+                            <button type="button" class="toggle-password" onclick="togglePasswordVisibility('cadastro-confirma-senha')">
+                                <i class="fas fa-eye"></i>
+                            </button>
+                        </div>
+                    </div>
+
+                    <button type="submit" class="btn-primary">Cadastrar</button>
+                </form>
+
+                <div class="form-footer">
+                    <p>Já tem uma conta? <a href="javascript:void(0);" onclick="mostrarLogin()" class="link">Faça login</a></p>
+                </div>
+
+                <div class="back-link">
+                    <i class="fas fa-arrow-left"></i>
+                    <a href="index.html" class="link">Voltar para a página inicial</a>
+                </div>
+            </div>
+        </div>
     </div>
 
-    <!-- Cadastro -->
-    <div id="cadastro-box" class="login-box hidden">
-      <h2>Cadastro</h2>
-      <form class="form">
-        <input type="text" placeholder="Nome completo" required>
-        <input type="email" placeholder="E-mail" required>
-        <input type="tel" placeholder="Telefone" required>
-        <input type="password" placeholder="Criar senha" required>
-        <button type="submit" class="btn-primary">Cadastrar</button>
-      </form>
+    <div id="modalRecuperar" class="modal hidden">
+        <div class="modal-content">
+            <span class="close" onclick="fecharModalRecuperar()">&times;</span>
+            <h3>Recuperação de Senha</h3>
+            <p>Digite seu e-mail ou número de WhatsApp cadastrado para receber um link de recuperação.</p>
 
-      <div class="back-link">
-        <a href="javascript:void(0);" onclick="mostrarLogin()">← Já tem conta? Fazer login</a>
-      </div>
+            <div id="recuperar-message" class="form-message success hidden">
+                <i class="fas fa-check-circle"></i>
+                <span>Mensagem de sucesso aparecerá aqui</span>
+            </div>
+
+            <form id="recuperar-form" class="form">
+                <div class="form-group">
+                    <label for="recuperar-email">E-mail</label>
+                    <div class="input-container">
+                        <input type="email" id="recuperar-email" class="form-input" placeholder="Seu e-mail cadastrado">
+                        <i class="fas fa-envelope input-icon"></i>
+                    </div>
+                </div>
+
+                <div class="form-divider">
+                    <span class="form-divider-text">ou</span>
+                </div>
+
+                <div class="form-group">
+                    <label for="recuperar-whatsapp">WhatsApp</label>
+                    <div class="input-container">
+                        <input type="tel" id="recuperar-whatsapp" class="form-input" placeholder="Seu WhatsApp cadastrado">
+                        <i class="fab fa-whatsapp input-icon"></i>
+                    </div>
+                </div>
+
+                <button type="submit" class="btn-primary">Enviar link de recuperação</button>
+            </form>
+        </div>
     </div>
-  </section>
 
-  <!-- Modal de Recuperação de Senha -->
-  <div id="modalRecuperar" class="modal">
-    <div class="modal-content">
-      <span class="close" onclick="fecharModal()">&times;</span>
-      <h3>Recuperar Senha</h3>
-      <p>Digite seu e-mail <strong>ou</strong> número de WhatsApp:</p>
-      <input type="email" id="emailRecuperar" placeholder="Digite seu e-mail">
-      <input type="tel" id="whatsappRecuperar" placeholder="Ou seu número de WhatsApp">
-      <button onclick="enviarRecuperacao()">Enviar</button>
-    </div>
-  </div>
-
-  <script>
-    function mostrarCadastro() {
-      document.getElementById('login-box').classList.add('hidden');
-      document.getElementById('cadastro-box').classList.remove('hidden');
-    }
-
-    function mostrarLogin() {
-      document.getElementById('cadastro-box').classList.add('hidden');
-      document.getElementById('login-box').classList.remove('hidden');
-    }
-  </script>
-
-  <script src="js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
